test/spec_vectors/memory_init64/fail/module_62.wat
(module (memory i64 1) (data "7") (func (export "test") (memory.init 0 (i64.const 1) (i64.const 1) (i64.const 1))))